@@ -33,6 +33,7 @@ This release includes the following bugfixes:
  o curl_easy_duphandle() crash
  o curl -V / curl_verion*() works even when GnuTLS is used on a system without
    a good random source
+ o curl_multi_socket() not "noticing" newly added handles
 
 This release includes the following known bugs:
 
@@ -56,6 +57,6 @@ advice from friends like these:
 
  Song Ma, Dan Fandrich, Yang Tse, Jay Austin, Robert Iakobashvil,
  James Housley, Daniel Black, Steve Little, Sonia Subramanian, Peter O'Gorman,
- Frank Hempel
+ Frank Hempel, Michael Wallner
 
         Thanks! (and sorry if I forgot to mention someone)
